noinst_LIBRARIES = libla350.a

libla350_a_SOURCES = \
dbdsdc.f    dbdsqr.f    dgebd2.f    dgebrd.f    dgelq2.f    dgelqf.f    \
dgelsd.f    dgelss.f    dgeqr2.f    dgeqrf.f    dgesdd.f    dgesvd.f    \
dgesv.f     dgetf2.f    dgetrf.f    dgetri.f    dgetrs.f    disnan.f    \
dlabad.f    dlabrd.f    dlacpy.f    dladiv.f    dlae2.f     dlaebz.f    \
dlaed0.f    dlaed1.f    dlaed2.f    dlaed3.f    dlaed4.f    dlaed5.f    \
dlaed6.f    dlaed7.f    dlaed8.f    dlaed9.f    dlaeda.f    dlaev2.f    \
dlagtf.f    dlagts.f    dlaisnan.f  dlals0.f    dlalsa.f    dlalsd.f    \
dlamch.f    dlamrg.f    dlange.f    dlansp.f    dlanst.f    dlansy.f    \
dlapy2.f    dlapy3.f    dlarfb.f    dlarf.f     dlarfg.f    dlarft.f    \
dlarnv.f    dlartg.f    dlaruv.f    dlas2.f     dlascl.f    dlasd0.f    \
dlasd1.f    dlasd2.f    dlasd3.f    dlasd4.f    dlasd5.f    dlasd6.f    \
dlasd7.f    dlasd8.f    dlasda.f    dlasdq.f    dlasdt.f    dlaset.f    \
dlasq1.f    dlasq2.f    dlasq3.f    dlasq4.f    dlasq5.f    dlasq6.f    \
dlasr.f     dlasrt.f    dlassq.f    dlasv2.f    dlaswp.f    dlasyf.f    \
dlatrd.f    dlauu2.f    dlauum.f    dopgtr.f    dopmtr.f    dorg2l.f    \
dorg2r.f    dorgbr.f    dorgl2.f    dorglq.f    dorgql.f    dorgqr.f    \
dorgtr.f    dorm2l.f    dorm2r.f    dormbr.f    dorml2.f    dormlq.f    \
dormql.f    dormqr.f    dormtr.f    dpotf2.f    dpotrf.f    dpotri.f    \
dpptrf.f    dpptri.f    drscl.f     dspevd.f    dspev.f     dspevx.f    \
dspsv.f     dsptrd.f    dsptrf.f    dsptrs.f    dstebz.f    dstedc.f    \
dstein.f    dsteqr.f    dsterf.f    dsyconv.f   dsyevd.f    dsyev.f     \
dsyevx.f    dsygs2.f    dsygst.f    dsygv.f     dsysv.f     dsytd2.f    \
dsytf2.f    dsytrd.f    dsytrf.f    dsytrs2.f   dsytrs.f    dtptri.f    \
dtrti2.f    dtrtri.f    ieeeck.f    iladlc.f    iladlr.f    ilaenv.f    \
ilazlc.f    ilazlr.f    iparmq.f    zgetf2.f    zgetrf.f    zgetri.f    \
zheev.f     zhetd2.f    zhetrd.f    zlacgv.f    zladiv.f    zlanhe.f    \
zlarfb.f    zlarf.f     zlarfg.f    zlarft.f    zlascl.f    zlaset.f    \
zlasr.f     zlassq.f    zlaswp.f    zlatrd.f    zsteqr.f    ztrti2.f    \
ztrtri.f    zung2l.f    zung2r.f    zungql.f    zungqr.f    zungtr.f

dbdsdc.o: dbdsdc.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dbdsdc.f

dbdsqr.o: dbdsqr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dbdsqr.f

dgebd2.o: dgebd2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgebd2.f

dgebrd.o: dgebrd.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgebrd.f

dgelq2.o: dgelq2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgelq2.f

dgelqf.o: dgelqf.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgelqf.f

dgelsd.o: dgelsd.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgelsd.f

dgelss.o: dgelss.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgelss.f

dgeqr2.o: dgeqr2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgeqr2.f

dgeqrf.o: dgeqrf.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgeqrf.f

dgesdd.o: dgesdd.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgesdd.f

dgesvd.o: dgesvd.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgesvd.f

dgesv.o: dgesv.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgesv.f

dgetf2.o: dgetf2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgetf2.f

dgetrf.o: dgetrf.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgetrf.f

dgetri.o: dgetri.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgetri.f

dgetrs.o: dgetrs.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dgetrs.f

disnan.o: disnan.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c disnan.f

dlabad.o: dlabad.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlabad.f

dlabrd.o: dlabrd.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlabrd.f

dlacpy.o: dlacpy.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlacpy.f

dladiv.o: dladiv.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dladiv.f

dlae2.o: dlae2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlae2.f

dlaebz.o: dlaebz.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaebz.f

dlaed0.o: dlaed0.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaed0.f

dlaed1.o: dlaed1.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaed1.f

dlaed2.o: dlaed2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaed2.f

dlaed3.o: dlaed3.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaed3.f

dlaed4.o: dlaed4.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaed4.f

dlaed5.o: dlaed5.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaed5.f

dlaed6.o: dlaed6.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaed6.f

dlaed7.o: dlaed7.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaed7.f

dlaed8.o: dlaed8.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaed8.f

dlaed9.o: dlaed9.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaed9.f

dlaeda.o: dlaeda.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaeda.f

dlaev2.o: dlaev2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaev2.f

dlagtf.o: dlagtf.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlagtf.f

dlagts.o: dlagts.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlagts.f

dlaisnan.o: dlaisnan.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaisnan.f

dlals0.o: dlals0.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlals0.f

dlalsa.o: dlalsa.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlalsa.f

dlalsd.o: dlalsd.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlalsd.f

dlamch.o: dlamch.f
	$(F90) $(FIXED)$(FFLAGS1_LAPACK) -c dlamch.f

dlamrg.o: dlamrg.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlamrg.f

dlange.o: dlange.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlange.f

dlansp.o: dlansp.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlansp.f

dlanst.o: dlanst.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlanst.f

dlansy.o: dlansy.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlansy.f

dlapy2.o: dlapy2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlapy2.f

dlapy3.o: dlapy3.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlapy3.f

dlarfb.o: dlarfb.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlarfb.f

dlarf.o: dlarf.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlarf.f

dlarfg.o: dlarfg.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlarfg.f

dlarft.o: dlarft.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlarft.f

dlarnv.o: dlarnv.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlarnv.f

dlartg.o: dlartg.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlartg.f

dlaruv.o: dlaruv.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaruv.f

dlas2.o: dlas2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlas2.f

dlascl.o: dlascl.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlascl.f

dlasd0.o: dlasd0.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasd0.f

dlasd1.o: dlasd1.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasd1.f

dlasd2.o: dlasd2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasd2.f

dlasd3.o: dlasd3.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasd3.f

dlasd4.o: dlasd4.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasd4.f

dlasd5.o: dlasd5.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasd5.f

dlasd6.o: dlasd6.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasd6.f

dlasd7.o: dlasd7.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasd7.f

dlasd8.o: dlasd8.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasd8.f

dlasda.o: dlasda.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasda.f

dlasdq.o: dlasdq.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasdq.f

dlasdt.o: dlasdt.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasdt.f

dlaset.o: dlaset.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaset.f

dlasq1.o: dlasq1.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasq1.f

dlasq2.o: dlasq2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasq2.f

dlasq3.o: dlasq3.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasq3.f

dlasq4.o: dlasq4.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasq4.f

dlasq5.o: dlasq5.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasq5.f

dlasq6.o: dlasq6.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasq6.f

dlasr.o: dlasr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasr.f

dlasrt.o: dlasrt.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasrt.f

dlassq.o: dlassq.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlassq.f

dlasv2.o: dlasv2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasv2.f

dlaswp.o: dlaswp.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlaswp.f

dlasyf.o: dlasyf.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlasyf.f

dlatrd.o: dlatrd.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlatrd.f

dlauu2.o: dlauu2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlauu2.f

dlauum.o: dlauum.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dlauum.f

dopgtr.o: dopgtr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dopgtr.f

dopmtr.o: dopmtr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dopmtr.f

dorg2l.o: dorg2l.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dorg2l.f

dorg2r.o: dorg2r.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dorg2r.f

dorgbr.o: dorgbr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dorgbr.f

dorgl2.o: dorgl2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dorgl2.f

dorglq.o: dorglq.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dorglq.f

dorgql.o: dorgql.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dorgql.f

dorgqr.o: dorgqr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dorgqr.f

dorgtr.o: dorgtr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dorgtr.f

dorm2l.o: dorm2l.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dorm2l.f

dorm2r.o: dorm2r.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dorm2r.f

dormbr.o: dormbr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dormbr.f

dorml2.o: dorml2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dorml2.f

dormlq.o: dormlq.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dormlq.f

dormql.o: dormql.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dormql.f

dormqr.o: dormqr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dormqr.f

dormtr.o: dormtr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dormtr.f

dpotf2.o: dpotf2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dpotf2.f

dpotrf.o: dpotrf.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dpotrf.f

dpotri.o: dpotri.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dpotri.f

dpptrf.o: dpptrf.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dpptrf.f

dpptri.o: dpptri.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dpptri.f

drscl.o: drscl.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c drscl.f

dspevd.o: dspevd.f
	$(F90) $(FIXED)$(FFLAGS1_LAPACK) -c dspevd.f

dspev.o: dspev.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dspev.f

dspevx.o: dspevx.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dspevx.f

dspsv.o: dspsv.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dspsv.f

dsptrd.o: dsptrd.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsptrd.f

dsptrf.o: dsptrf.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsptrf.f

dsptrs.o: dsptrs.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsptrs.f

dstebz.o: dstebz.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dstebz.f

dstedc.o: dstedc.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dstedc.f

dstein.o: dstein.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dstein.f

dsteqr.o: dsteqr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsteqr.f

dsterf.o: dsterf.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsterf.f

dsyconv.o: dsyconv.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsyconv.f

dsyevd.o: dsyevd.f
	$(F90) $(FIXED)$(FFLAGS1_LAPACK) -c dsyevd.f

dsyev.o: dsyev.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsyev.f

dsyevx.o: dsyevx.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsyevx.f

dsygs2.o: dsygs2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsygs2.f

dsygst.o: dsygst.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsygst.f

dsygv.o: dsygv.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsygv.f

dsysv.o: dsysv.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsysv.f

dsytd2.o: dsytd2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsytd2.f

dsytf2.o: dsytf2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsytf2.f

dsytrd.o: dsytrd.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsytrd.f

dsytrf.o: dsytrf.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsytrf.f

dsytrs2.o: dsytrs2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsytrs2.f

dsytrs.o: dsytrs.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dsytrs.f

dtptri.o: dtptri.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dtptri.f

dtrti2.o: dtrti2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dtrti2.f

dtrtri.o: dtrtri.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c dtrtri.f

ieeeck.o: ieeeck.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c ieeeck.f

iladlc.o: iladlc.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c iladlc.f

iladlr.o: iladlr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c iladlr.f

ilaenv.o: ilaenv.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c ilaenv.f

ilazlc.o: ilazlc.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c ilazlc.f

ilazlr.o: ilazlr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c ilazlr.f

iparmq.o: iparmq.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c iparmq.f

zgetf2.o: zgetf2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zgetf2.f

zgetrf.o: zgetrf.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zgetrf.f

zgetri.o: zgetri.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zgetri.f

zheev.o: zheev.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zheev.f

zhetd2.o: zhetd2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zhetd2.f

zhetrd.o: zhetrd.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zhetrd.f

zlacgv.o: zlacgv.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zlacgv.f

zladiv.o: zladiv.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zladiv.f

zlanhe.o: zlanhe.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zlanhe.f

zlarfb.o: zlarfb.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zlarfb.f

zlarf.o: zlarf.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zlarf.f

zlarfg.o: zlarfg.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zlarfg.f

zlarft.o: zlarft.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zlarft.f

zlascl.o: zlascl.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zlascl.f

zlaset.o: zlaset.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zlaset.f

zlasr.o: zlasr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zlasr.f

zlassq.o: zlassq.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zlassq.f

zlaswp.o: zlaswp.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zlaswp.f

zlatrd.o: zlatrd.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zlatrd.f

zsteqr.o: zsteqr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zsteqr.f

ztrti2.o: ztrti2.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c ztrti2.f

ztrtri.o: ztrtri.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c ztrtri.f

zung2l.o: zung2l.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zung2l.f

zung2r.o: zung2r.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zung2r.f

zungql.o: zungql.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zungql.f

zungqr.o: zungqr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zungqr.f

zungtr.o: zungtr.f
	$(F90) $(FIXED)$(FFLAGS2_LAPACK) -c zungtr.f

