noinst_LIBRARIES = libsurface.a

libsurface_a_SOURCES =                                      \
BOMD.f      BPARKD.f    CONINT.f    DYNAM.f90   EHRENFEST.f \
MULSAV.f    MULSTA.f    NACANA.f    NACINT.f    NACNUM.f    \
SCFMUL.f    SCROSS.f    SIMPHOP.f   SURHOP.f    YARHES.f    \
random.f90

CONST.o: ../CONST.f90
	$(F90) $(FREE)$(FFLAGS2_PSEX) -c ../CONST.f90

LIMIT.o: ../LIMIT.f90
	$(F90) $(FREE)$(FFLAGS2_PSEX) -c ../LIMIT.f90

BOMD.o: BOMD.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_PSEX) -c BOMD.f

BPARKD.o: BPARKD.f
	$(F90) $(FIXED)$(FFLAGS2_PSEX) -c BPARKD.f

CONINT.o: CONINT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_PSEX) -c CONINT.f

DYNAM.o: DYNAM.f90 LIMIT.o random.o
	$(F90) $(FREE)$(FFLAGS2_PSEX) -c DYNAM.f90

EHRENFEST.o: EHRENFEST.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_PSEX) -c EHRENFEST.f

MULSAV.o: MULSAV.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_PSEX) -c MULSAV.f

MULSTA.o: MULSTA.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_PSEX) -c MULSTA.f

NACANA.o: NACANA.f CONST.o LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_PSEX) -c NACANA.f

NACINT.o: NACINT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_PSEX) -c NACINT.f

NACNUM.o: NACNUM.f CONST.o LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_PSEX) -c NACNUM.f

SCFMUL.o: SCFMUL.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_PSEX) -c SCFMUL.f

SCROSS.o: SCROSS.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_PSEX) -c SCROSS.f

SIMPHOP.o: SIMPHOP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_PSEX) -c SIMPHOP.f

SURHOP.o: SURHOP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_PSEX) -c SURHOP.f

YARHES.o: YARHES.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_PSEX) -c YARHES.f

random.o: random.f90
	$(F90) $(FREE)$(FFLAGS2_PSEX) -c random.f90
