noinst_LIBRARIES = libvb.a

libvb_a_SOURCES = VBFACE.f VBINTS.f OAOINT.f90

LIMIT.o: ../LIMIT.f90
	$(F90) $(FREE)$(FFLAGS2_VB) -c ../LIMIT.f90

VBFACE.o: VBFACE.f OAOINT.o LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_VB) -c VBFACE.f

VBINTS.o: VBINTS.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_VB) -c VBINTS.f

OAOINT.o: OAOINT.f90
	$(F90) $(FREE)$(FFLAGS2_VB) -c OAOINT.f90
